--- a/_layouts/home2.html
+++ b/_layouts/home2.html
@@ -61,5 +61,11 @@
 
 {% include _scripts.html %}
 {% include analytics.html %}
+
+
+{% if jekyll.environment == 'production' and site.google_analytics %}
+{% include analytics.html %}
+{% endif %}
+
 </body>
 </html>
